// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListingDetailsLotteryPreferences displays 2 preferences - NRHP, L/W 1`] = `
<div
  className="text-sm"
>
  <p
    className="px-8 pb-4 text-xs"
  >
    Lottery results are divided into multiple lists. Please see below for general information about each preference. For your specific results, please enter your lottery number.
  </p>
  <header
    className="border-b border-gray-450 mb-4"
  >
    <h2
      className="text__underline-weighted mx-8"
    >
      Housing Preferences
    </h2>
    <p
      className="pb-4 text-gray-700 text-xs mx-8"
    >
      <p>
        Ranking in these lists is considered in the order shown here. 
        <a
          href="https://www.youtube.com/watch?v=4ZB35gagUl8"
          target="_blank"
        >
          Learn how lottery ranking works.
        </a>
      </p>
    </p>
  </header>
  <div>
    <div
      className="px-8 "
    >
      <h3
        className="font-sans font-semibold text-xs tracking-wide uppercase"
      >
        Neighborhood Resident Housing Preference (NRHP)
      </h3>
      <p
        className="text-sm"
      >
        Up to 5 units
      </p>
      <p
        className="text-gray-700 text-sm"
      >
        6 applicants are on this list.
      </p>
    </div>
    <hr
      className="my-4"
    />
  </div>
  <div>
    <div
      className="px-8 "
    >
      <h3
        className="font-sans font-semibold text-xs tracking-wide uppercase"
      >
        Live or Work in San Francisco Preference
      </h3>
      <p
        className="text-sm"
      >
        Up to 13 units
      </p>
      <p
        className="text-gray-700 text-sm"
      >
        56 applicants are on this list.
      </p>
    </div>
    <hr
      className="mt-4"
    />
  </div>
  <div
    className="bg-gray-100 border-b mb-4 p-4"
  >
    <hr
      className="border-b-4 border-primary"
    />
  </div>
  <div
    className="px-8"
  >
    <h3
      className="font-sans font-semibold text-sm tracking-wide uppercase"
    >
      General Pool
    </h3>
    <p
      className="mb-1 text-sm"
    >
      Any remaining units
    </p>
    <p
      className="text-gray-700 text-sm"
    >
      5 applicants are on this list. Please note, preference holders will be considered for all units first.
    </p>
  </div>
  <hr
    className="mt-4"
  />
</div>
`;

exports[`ListingDetailsLotteryPreferences displays 3 default preferences - COP, DTHP, L/W 1`] = `
<div
  className="text-sm"
>
  <p
    className="px-8 pb-4 text-xs"
  >
    Lottery results are divided into multiple lists. Please see below for general information about each preference. For your specific results, please enter your lottery number.
  </p>
  <header
    className="border-b border-gray-450 mb-4"
  >
    <h2
      className="text__underline-weighted mx-8"
    >
      Housing Preferences
    </h2>
    <p
      className="pb-4 text-gray-700 text-xs mx-8"
    >
      <p>
        Ranking in these lists is considered in the order shown here. 
        <a
          href="https://www.youtube.com/watch?v=4ZB35gagUl8"
          target="_blank"
        >
          Learn how lottery ranking works.
        </a>
      </p>
    </p>
  </header>
  <div>
    <div
      className="px-8 "
    >
      <h3
        className="font-sans font-semibold text-xs tracking-wide uppercase"
      >
        Certificate of Preference (COP)
      </h3>
      <p
        className="text-sm"
      >
        Up to 1 units
      </p>
      <p
        className="text-gray-700 text-sm"
      >
        1 applicants are on this list.
      </p>
    </div>
    <hr
      className="my-4"
    />
  </div>
  <div>
    <div
      className="px-8 "
    >
      <h3
        className="font-sans font-semibold text-xs tracking-wide uppercase"
      >
        Displaced Tenant Housing Preference (DTHP)
      </h3>
      <p
        className="text-sm"
      >
        Up to 1 units
      </p>
      <p
        className="text-gray-700 text-sm"
      >
        4 applicants are on this list.
      </p>
    </div>
    <hr
      className="my-4"
    />
  </div>
  <div>
    <div
      className="px-8 "
    >
      <h3
        className="font-sans font-semibold text-xs tracking-wide uppercase"
      >
        Live or Work in San Francisco Preference
      </h3>
      <p
        className="text-sm"
      >
        Up to 1 units
      </p>
      <p
        className="text-gray-700 text-sm"
      >
        905 applicants are on this list.
      </p>
    </div>
    <hr
      className="mt-4"
    />
  </div>
  <div
    className="bg-gray-100 border-b mb-4 p-4"
  >
    <hr
      className="border-b-4 border-primary"
    />
  </div>
  <div
    className="px-8"
  >
    <h3
      className="font-sans font-semibold text-sm tracking-wide uppercase"
    >
      General Pool
    </h3>
    <p
      className="mb-1 text-sm"
    >
      Any remaining units
    </p>
    <p
      className="text-gray-700 text-sm"
    >
      193 applicants are on this list. Please note, preference holders will be considered for all units first.
    </p>
  </div>
  <hr
    className="mt-4"
  />
</div>
`;
